--- a/src/output.css
+++ b/src/output.css
@@ -526,8 +526,14 @@
   .pointer-events-none {
     pointer-events: none;
   }
+  .collapse {
+    visibility: collapse;
+  }
   .fixed {
     position: fixed;
+  }
+  .relative {
+    position: relative;
   }
   .top-\[88\%\] {
     top: 88%;
@@ -559,6 +565,9 @@
   .box-border {
     box-sizing: border-box;
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
   }
@@ -567,6 +576,18 @@
   }
   .hidden {
     display: none;
+  }
+  .inline-flex {
+    display: inline-flex;
+  }
+  .list-item {
+    display: list-item;
+  }
+  .table {
+    display: table;
+  }
+  .h-\[80\%\] {
+    height: 80%;
   }
   .h-\[8vh\] {
     height: 8vh;
@@ -586,26 +607,46 @@
   .h-\[78vh\] {
     height: 78vh;
   }
-  .h-\[80\%\] {
-    height: 80%;
-  }
   .w-\[80\%\] {
     width: 80%;
   }
   .w-\[100\%\] {
     width: 100%;
   }
-  .w-dvw {
-    width: 100dvw;
+  .w-\[100vw\] {
+    width: 100vw;
+  }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
+  .flex-grow {
+    flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .-translate-y-10 {
+    --tw-translate-y: calc(var(--spacing) * -10);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-0 {
+    --tw-translate-y: calc(var(--spacing) * 0);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .rotate-\[180deg\] {
     rotate: 180deg;
+  }
+  .transform {
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
   .animate-show {
     animation: var(--animate-show);
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .scroll-p-20 {
     scroll-padding: calc(var(--spacing) * 20);
@@ -649,8 +690,8 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .overflow-scroll {
-    overflow: scroll;
+  .overflow-x-hidden {
+    overflow-x: hidden;
   }
   .overflow-x-scroll {
     overflow-x: scroll;
@@ -664,6 +705,10 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-1 {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -673,6 +718,9 @@
   }
   .bg-blue-500 {
     background-color: var(--color-blue-500);
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .bg-white\/20 {
     background-color: color-mix(in oklab, var(--color-white) 20%, transparent);
@@ -685,9 +733,16 @@
     --tw-gradient-from: var(--color-blue-200);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .to-pink-200 {
+    --tw-gradient-to: var(--color-pink-200);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .to-pink-200\/80 {
     --tw-gradient-to: color-mix(in oklab, var(--color-pink-200) 80%, transparent);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .p-0 {
+    padding: calc(var(--spacing) * 0);
   }
   .p-0\.5 {
     padding: calc(var(--spacing) * 0.5);
@@ -730,17 +785,24 @@
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
-  .text-base {
-    font-size: var(--text-base);
-    line-height: var(--tw-leading, var(--text-base--line-height));
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
+  .tracking-wide {
+    --tw-tracking: var(--tracking-wide);
+    letter-spacing: var(--tracking-wide);
+  }
   .tracking-widest {
     --tw-tracking: var(--tracking-widest);
     letter-spacing: var(--tracking-widest);
+  }
+  .text-wrap {
+    text-wrap: wrap;
   }
   .whitespace-nowrap {
     white-space: nowrap;
@@ -760,6 +822,9 @@
   .text-gray-700 {
     color: var(--color-gray-700);
   }
+  .underline {
+    text-decoration-line: underline;
+  }
   .opacity-20 {
     opacity: 20%;
   }
@@ -773,6 +838,10 @@
   .shadow-xl {
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .invalid\:border-none {
     &:invalid {
@@ -792,6 +861,29 @@
       }
     }
   }
+  .sm\:scrollbar-thin {
+    @media (width >= 40rem) {
+      &::-webkit-scrollbar-track {
+        background-color: var(--scrollbar-track);
+        border-radius: var(--scrollbar-track-radius);
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: var(--scrollbar-thumb);
+        border-radius: var(--scrollbar-thumb-radius);
+      }
+      &::-webkit-scrollbar-corner {
+        background-color: var(--scrollbar-corner);
+        border-radius: var(--scrollbar-corner-radius);
+      }
+      scrollbar-width: thin;
+      scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial);
+      &::-webkit-scrollbar {
+        display: block;
+        width: 8px;
+        height: 8px;
+      }
+    }
+  }
   .sm\:justify-center {
     @media (width >= 40rem) {
       justify-content: center;
@@ -800,6 +892,61 @@
   .sm\:gap-\[20\%\] {
     @media (width >= 40rem) {
       gap: 20%;
+    }
+  }
+  .sm\:overflow-y-auto {
+    @media (width >= 40rem) {
+      overflow-y: auto;
+    }
+  }
+  .sm\:scrollbar-thumb-blue-400 {
+    @media (width >= 40rem) {
+      --scrollbar-thumb: oklch(0.707 0.165 254.624);
+    }
+  }
+  .sm\:scrollbar-track-gray-300 {
+    @media (width >= 40rem) {
+      --scrollbar-track: oklch(0.872 0.01 258.338);
+    }
+  }
+  .hover\:sm\:scrollbar-thin {
+    &:hover {
+      @media (hover: hover) {
+        @media (width >= 40rem) {
+          &::-webkit-scrollbar-track {
+            background-color: var(--scrollbar-track);
+            border-radius: var(--scrollbar-track-radius);
+          }
+          &::-webkit-scrollbar-thumb {
+            background-color: var(--scrollbar-thumb);
+            border-radius: var(--scrollbar-thumb-radius);
+          }
+          &::-webkit-scrollbar-corner {
+            background-color: var(--scrollbar-corner);
+            border-radius: var(--scrollbar-corner-radius);
+          }
+          scrollbar-width: thin;
+          scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial);
+          &::-webkit-scrollbar {
+            display: block;
+            width: 8px;
+            height: 8px;
+          }
+        }
+      }
+    }
+  }
+  .md\:scrollbar-none {
+    @media (width >= 48rem) {
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
+  .md\:h-\[84vh\] {
+    @media (width >= 48rem) {
+      height: 84vh;
     }
   }
   .md\:w-\[70\%\] {
@@ -822,14 +969,19 @@
       display: none;
     }
   }
-  .xl\:h-\[85vh\] {
+  .xl\:h-\[70vh\] {
     @media (width >= 80rem) {
-      height: 85vh;
+      height: 70vh;
     }
   }
-  .xl\:w-\[35\%\] {
+  .xl\:h-\[82\%\] {
     @media (width >= 80rem) {
-      width: 35%;
+      height: 82%;
+    }
+  }
+  .xl\:w-\[28\%\] {
+    @media (width >= 80rem) {
+      width: 28%;
     }
   }
   .xl\:w-\[40\%\] {
@@ -847,9 +999,40 @@
       justify-content: center;
     }
   }
-  .xl\:pt-10 {
+  .xl\:gap-\[4\%\] {
     @media (width >= 80rem) {
-      padding-top: calc(var(--spacing) * 10);
+      gap: 4%;
+    }
+  }
+  .xl\:gap-x-\[10\%\] {
+    @media (width >= 80rem) {
+      column-gap: 10%;
+    }
+  }
+  .xl\:overflow-hidden {
+    @media (width >= 80rem) {
+      overflow: hidden;
+    }
+  }
+  .xl\:overflow-y-hidden {
+    @media (width >= 80rem) {
+      overflow-y: hidden;
+    }
+  }
+  .xl\:p-0 {
+    @media (width >= 80rem) {
+      padding: calc(var(--spacing) * 0);
+    }
+  }
+  .xl\:pt-8 {
+    @media (width >= 80rem) {
+      padding-top: calc(var(--spacing) * 8);
+    }
+  }
+  .xl\:text-5xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
     }
   }
 }
@@ -887,6 +1070,10 @@
     &:focus {
       outline-color: var(--color-blue-500);
     }
+    @media (width >= 64rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
   }
   .formElement {
     display: flex;
@@ -922,6 +1109,12 @@
     text-wrap: balance;
     --tw-duration: 400ms;
     transition-duration: 400ms;
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 70);
+    }
+    @media (width >= 64rem) {
+      font-size: 130%;
+    }
   }
   .visibleBlock {
     display: flex;
@@ -934,9 +1127,13 @@
     border-radius: var(--radius-2xl);
     background-color: var(--color-blue-500);
     padding-inline: calc(var(--spacing) * 4);
+    font-family: var(--font-poppins);
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
     color: var(--color-gray-200);
+    @media (width >= 48rem) {
+      height: calc(var(--spacing) * 20);
+    }
   }
   .studentBlock {
     display: flex;
@@ -999,6 +1196,12 @@
     transition-duration: var(--tw-duration, var(--default-transition-duration));
     --tw-duration: 400ms;
     transition-duration: 400ms;
+    @media (width >= 48rem) {
+      height: calc(var(--spacing) * 15);
+    }
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 15);
+    }
   }
   .editInput {
     grid-column: span 6 / span 6;
@@ -1036,6 +1239,12 @@
     }
   }
 }
+@layer base {
+  * {
+    scrollbar-color: initial;
+    scrollbar-width: initial;
+  }
+}
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -1071,6 +1280,46 @@
     transform: translate-y-0;
     opacity: 1;
   }
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateX(0);
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateY(0);
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateZ(0);
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewX(0);
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewY(0);
 }
 @property --tw-border-style {
   syntax: "*";
